[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carithm-visual-inspector"
version = "0.1.0"
description = "Stateless vehicle-image damage inspection API."
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.110",
  "numpy>=1.26,<2",
  "uvicorn[standard]>=0.29",
  "python-multipart>=0.0.9",
  "pillow>=10.0",
]

[project.optional-dependencies]
detector = ["mmcv-full>=1.7.0,<1.7.1", "mmdet>=2.28.2,<2.29", "torch>=2.2,<2.3"]
app = ["streamlit>=1.36"]
dev = ["httpx>=0.27", "pytest>=8.0", "ruff>=0.6"]

[project.scripts]
carithm-inspector = "carithm_inspector.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/carithm_inspector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
